trunk/Archive/5a5c37fe8008b7e29a6ae91c09806ad5-f60995e18ad2fc0ff17ff8c1e6a19e2a/output
+ gcc-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘constexpr bool f(int)’:
main.cpp:5:5: error: non-constant condition for static assertion
     static_assert(__builtin_constant_p(x), "");
     ^
main.cpp:5:5: error: ‘x’ is not a constant expression
main.cpp: In function ‘int main()’:
main.cpp:13:20: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
     scanf("%d", &x);
                    ^
